added even tracking script

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119412150-1"></script>
 <script>
+
+//Hightouch event collection
+<script type="text/javascript">
+!function(){var e=window.htevents=window.htevents||[];if(!e.initialize)if(e.invoked)window.console&&console.error&&console.error("Hightouch snippet included twice.");else{e.invoked=!0,e.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"],e.factory=function(t){return function(){var n=Array.prototype.slice.call(arguments);return n.unshift(t),e.push(n),e}};for(var t=0;t<e.methods.length;t++){var n=e.methods[t];e[n]=e.factory(n)}e.load=function(t,n){var o=document.createElement("script");o.type="text/javascript",o.async=!0,o.src="https://cdn.hightouch-events.com/browser/release/v1-latest/events.min.js";var r=document.getElementsByTagName("script")[0];r.parentNode.insertBefore(o,r),e._loadOptions=n,e._writeKey=t},e.SNIPPET_VERSION="0.0.1",
+e.load('52563112fa7908fd58cfdf62691565c30da3674950b876658e4f2df5791f34f9',{apiHost:'us-east-1.hightouch-events.com'}),
+e.page()}}();
+</script>
+
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
@@ -83,7 +91,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
       <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Orchard • 2023 • Research & Design</h4>
       <h2>Home shopping dashboard</h2>
       <h3 style="color: var(--mediumgray)">Equipped real estate agents with clearer insights into customer behavior & motivations.</h3>
-      <p><a href="homeshopping.html">Learn more →</a></p>
+      <p><a onclick="homeshoppingclick()" href="homeshopping.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/homeshopping/hs.png">
   </div>
