updated event collection code

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ e.page()}}();
       <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Orchard • 2023 • Research & Design</h4>
       <h2>Home shopping dashboard</h2>
       <h3 style="color: var(--mediumgray)">Equipped real estate agents with clearer insights into customer behavior & motivations.</h3>
-      <p><a onclick="homeshoppingclick()" href="homeshopping.html">Learn more →</a></p>
+      <p><a onclick="caseStudyClick(25)" href="homeshopping.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/homeshopping/hs.png">
   </div>
@@ -99,7 +99,7 @@ e.page()}}();
       <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Orchard • 2023 • Research & Design</h4>
       <h2>Customer booking workflow</h2>
       <h3 style="color: var(--mediumgray)">Enabled sales teams to generate booking contracts 10x faster.</h3>
-      <p><a href="booking.html">Learn more →</a></p>
+      <p><a onclick="caseStudyClick('booking')" href="booking.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/booking/main-1.png">
   </div>
@@ -109,7 +109,7 @@ e.page()}}();
       <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Orchard • 2022 • Vision & Strategy</h4>
       <h2>Platform product vision</h2>
       <h3 style="color: var(--mediumgray)">Defined a UX vision and 2023 roadmap to integrate 3 platform tools into one unified product experience.</h3>
-      <p><a href="orchard-roadmap.html">Learn more →</a></p>
+      <p><a onclick="caseStudyClick('roadmap')" href="orchard-roadmap.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/roadmap.png">
   </div>
@@ -142,7 +142,7 @@ e.page()}}();
         <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Deloitte Digital • 2020 • Research & Design</h4>
         <h2>Food management system</h2>
         <h3 style="color: var(--mediumgray)">Streamlined the USDA's point of sale and inventory management system, supporting affordable food access for 100,000+ low-income individuals.</h3>
-        <p><a href="fms-pos.html">Learn more →</a></p>
+        <p><a onclick="caseStudyClick('IFMS')" href="fms-pos.html">Learn more →</a></p>
       </div>
       <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
     </div>
