--- a/about.html
+++ b/about.html
@@ -59,7 +59,11 @@
             Hey! I'm Emily. I'm an NYC-based product designer.
           </p> -->
 
-          <p>Most recently, I worked at <a href="https://orchard.com/">Orchard</a>, a real estate startup that offers streamlined services and tooling for consumers looking to buy and/or sell their home. I led design on our Platform team, which supports all internal tooling for Orchard's agents and operations teams. In my 2+ years at Orchard, I worked on projects big & small, from redesigning a global search feature to overhauling our entire platform design system to introducing net-new customer management dashboards.</p>
+          <p>I currently work at <a href="https://hightouch.com/">Hightouch,</a> a startup in the data & marketer tools space, where I focus on our core <a href="https://hightouch.com/blog/reverse-etl">"Reverse ETL"</a> product, which allows customers to easily move data between their data warehouses and other tools.</p>
+          
+          <div  class="space"></div>
+
+          <p>Before that, I worked at <a href="https://orchard.com/">Orchard</a>, a real estate startup that offers streamlined services and tooling for consumers looking to buy and/or sell their home. I led design on our Platform team, which supports all internal tooling for Orchard's agents and operations teams. In my 2+ years at Orchard, I worked on projects big & small, from redesigning a global search feature to overhauling our entire platform design system to introducing net-new customer management dashboards.</p>
 
           <div  class="space"></div>
 
