--- a/booking.html
+++ b/booking.html
@@ -40,7 +40,7 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-	<div class="full-width" style="background-color: #D0F2FF; color: black">
+	<div class="full-width" style="background-color: var(--lightblue); color: black">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
