updated about page and resume

--- a/about.html
+++ b/about.html
@@ -65,7 +65,11 @@
             Hey! I'm Emily. I'm an NYC-based product designer.
           </p> -->
 
-          <p>Most recently, I worked at <a href="https://orchard.com/">Orchard</a>, a real estate startup that offers streamlined services and tooling for consumers looking to buy and/or sell their home. I led design on our Platform team, which supports all internal tooling for Orchard's agents and operations teams. In my 2+ years at Orchard, I worked on projects big & small, from redesigning a global search feature to overhauling our entire platform design system to introducing net-new customer management dashboards.</p>
+          <p>I'm currently working at <a href="https://hightouch.com/" target="_blank">Hightouch</a>, a composable Customer Data Platform startup, where I've worked on a range of products from Events to Identity Resolution to the Customer Studio audience builder.</p>
+
+          <div  class="space"></div>
+
+          <p>Before that, I worked at <a href="https://orchard.com/">Orchard</a>, a real estate startup that offers streamlined services and tooling for consumers looking to buy and/or sell their home. I led design on our Platform team, which supports all internal tooling for Orchard's agents and operations teams. In my 2+ years at Orchard, I worked on projects big & small, from redesigning a global search feature to overhauling our entire platform design system to introducing net-new customer management dashboards.</p>
 
           <div  class="space"></div>
 
@@ -77,7 +81,7 @@
 
           <div  class="space"></div>
 
-          <p>In my free time, you can catch hanging with my cats (Bean & Basil), cooking elaborate dinners for friends, and reading.</p>
+          <p>In my free time, you can catch me glassblowing, hanging with my cats (Bean & Basil), cooking elaborate dinners for friends, and reading.</p>
 
         <div class="full-width-mid-page">
           <div class="panel dark" style="text-align: center; background-color: var(--white); width: 80%; padding-left: 10%; padding-right: 10%">
