updated about pg

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             Hey! I'm Emily. I'm an NYC-based product designer.
           </p> -->
 
-          <p>I'm currently working at <a href="https://hightouch.com/" target="_blank">Hightouch</a>, a composable Customer Data Platform startup, where I've worked on a range of products from Events to Identity Resolution to the Customer Studio audience builder.</p>
+          <p>I'm currently working at <a href="https://hightouch.com/" target="_blank">Hightouch</a>, a composable Customer Data Platform startup, building products for data engineers + marketers.</p>
 
           <div  class="space"></div>
 
