--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Emily Porat | Portfolio</title>
-<meta name="description" content="Emily Porat's Portfolio | UX/UI | Development | Technology Consulting | Emily Porat is a UX Designer at Deloitte Digital">
+<meta name="description" content="Emily Porat's Portfolio | Emily Porat is a UX Designer at Hightouch">
 <meta name="keywords" content="Emily Porat, Emily Porat Design, Deloitte, Deloitte Digital, Deloitte UX, Deloitte Digital UX, Emily Porat Deloitte, Emily Porat Deloitte UX, Carnegie Mellon University, Emily Porat CMU, Emily Porat Carnegie Mellon, Emily Porat Carnegie Mellon University, Porat, Emily CMU, Porat CMU, Emily Porat UX, Emily Porat User Experience Design, User Experience Design, UX">
 <meta name="author" content="Emily Porat">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -34,6 +34,12 @@ $(function() {
 $('#nav').load('https://emilyporat.com/nav.html');
 $('#footer').load('https://emilyporat.com/footer.html');
 });
+</script>
+
+<script type="text/javascript">
+!function(){var e=window.htevents=window.htevents||[];if(!e.initialize)if(e.invoked)window.console&&console.error&&console.error("Hightouch snippet included twice.");else{e.invoked=!0,e.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"],e.factory=function(t){return function(){var n=Array.prototype.slice.call(arguments);return n.unshift(t),e.push(n),e}};for(var t=0;t<e.methods.length;t++){var n=e.methods[t];e[n]=e.factory(n)}e.load=function(t,n){var o=document.createElement("script");o.type="text/javascript",o.async=!0,o.src="https://cdn.hightouch-events.com/browser/release/v1-latest/events.min.js";var r=document.getElementsByTagName("script")[0];r.parentNode.insertBefore(o,r),e._loadOptions=n,e._writeKey=t},e.SNIPPET_VERSION="0.0.1",
+e.load('52563112fa7908fd58cfdf62691565c30da3674950b876658e4f2df5791f34f9',{apiHost:'us-east-1.hightouch-events.com'}),
+e.page()}}();
 </script>
 
 </head>
@@ -85,7 +91,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
       <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Orchard • 2023 • Research & Design</h4>
       <h2>Home shopping dashboard</h2>
       <h3 style="color: var(--mediumgray)">Equipped real estate agents with clearer insights into customer behavior & motivations.</h3>
-      <p><a href="homeshopping.html">Learn more →</a></p>
+      <p><a onclick="caseStudyClick(25)" href="homeshopping.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/homeshopping/hs.png">
   </div>
@@ -95,7 +101,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
       <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Orchard • 2023 • Research & Design</h4>
       <h2>Customer booking workflow</h2>
       <h3 style="color: var(--mediumgray)">Enabled sales teams to generate booking contracts 10x faster.</h3>
-      <p><a href="booking.html">Learn more →</a></p>
+      <p><a onclick="caseStudyClick('booking')" href="booking.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/booking/main-1.png">
   </div>
@@ -105,7 +111,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
       <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Orchard • 2022 • Vision & Strategy</h4>
       <h2>Platform product vision</h2>
       <h3 style="color: var(--mediumgray)">Defined a UX vision and 2023 roadmap to integrate 3 platform tools into one unified product experience.</h3>
-      <p><a href="orchard-roadmap.html">Learn more →</a></p>
+      <p><a onclick="caseStudyClick('roadmap')" href="orchard-roadmap.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/roadmap.png">
   </div>
@@ -138,7 +144,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
         <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Deloitte Digital • 2020 • Research & Design</h4>
         <h2>Food management system</h2>
         <h3 style="color: var(--mediumgray)">Streamlined the USDA's point of sale and inventory management system, supporting affordable food access for 100,000+ low-income individuals.</h3>
-        <p><a href="fms-pos.html">Learn more →</a></p>
+        <p><a onclick="caseStudyClick('IFMS')" href="fms-pos.html">Learn more →</a></p>
       </div>
       <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
     </div>
