added simulation page

--- a/homeshopping.html
+++ b/homeshopping.html
@@ -118,7 +118,7 @@
 				
 				<div class="space"></div>
 
-				<div class="highlight-box" style="background-color: #DDD9F7">
+				<div class="highlight-box" style="background-color: var(--lightpurple)">
 					<h3>Contribution summary</h3>
 					<div class="space"></div>
 					<div class="box-1">
