--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ e.page()}}();
               
               
               <h1 style="text-align: left; margin-bottom: 20px; color: white">Emily Porat</h1>
-              <h3 style="margin-bottom: 10px; text-align: left">End-to-end Senior Product Designer with 6 years of experience designing delightful enterprise tools for complex systems.</h3>
+              <h3 style="margin-bottom: 10px; text-align: left">End-to-end Senior Product Designer with 6+ years of experience designing delightful enterprise tools for complex systems.</h3>
               <p class="p-XL">Currently @ <a href="https://hightouch.com/" target="_blank">Hightouch</a></p> 
               <p class=p-XL>Formerly @ <a href="https://orchard.com/" target="_blank">Orchard</a> and <a href="https://www.deloittedigital.com/" target="_blank"> Deloitte Digital</a></p>
               <div class="space"></div>
@@ -85,12 +85,32 @@ e.page()}}();
   <div class="space"></div>
   <div class="space"></div>
 
+  <div class="section-large" style="background-color: var(--lightpurple)">  
+    <div class="project-info-large">
+      <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Hightouch • 2025 • Research & Design</h4>
+      <h2>Journey simulation</h2>
+      <h3 style="color: var(--mediumgray)">Sped up testing workflows for marketers building complex multi-step campaings</h3>
+      <p><a onclick="caseStudyClick('simulation')" href="simulation.html">Learn more →</a></p>
+    </div>
+    <img class="project-pic-large" src="pics/simulation/cover.png">
+  </div>
+
+  <div class="section-large" style="background-color: var(--lightblue)">  
+    <div class="project-info-large">
+      <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Hightouch • 2024 • Research & Design</h4>
+      <h2>Audience templates</h2>
+      <h3 style="color: var(--mediumgray)">Enabled marketers to leverage reusable templates for audience segmentation.</h3>
+      <p><a onclick="caseStudyClick('audience-templates')" href="audience-templates.html">Learn more →</a></p>
+    </div>
+    <img class="project-pic-large" src="pics/templates/cover.png">
+  </div>
+
   <div class="section-large" style="background-color: #6554CC">  
     <div class="project-info-large">
       <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Orchard • 2023 • Research & Design</h4>
       <h2>Home shopping dashboard</h2>
       <h3 style="color: var(--mediumgray)">Equipped real estate agents with clearer insights into customer behavior & motivations.</h3>
-      <p><a onclick="caseStudyClick(25)" href="homeshopping.html">Learn more →</a></p>
+      <p><a onclick="caseStudyClick('homeshopping')" href="homeshopping.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/homeshopping/hs.png">
   </div>
@@ -138,7 +158,7 @@ e.page()}}();
   </div> -->
 
 
-    <div class="section-large" style="background-color: white">
+    <!-- <div class="section-large" style="background-color: white">
       <div class="project-info-large">
         <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Deloitte Digital • 2020 • Research & Design</h4>
         <h2>Food management system</h2>
@@ -146,7 +166,7 @@ e.page()}}();
         <p><a onclick="caseStudyClick('IFMS')" href="fms-pos.html">Learn more →</a></p>
       </div>
       <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
-    </div>
+    </div> -->
 
 <!--   <div class="section-large" style="background-color: white;">
     <div class="project-info-large">
